--- a/experience/the-pushkar-glitch.html
+++ b/experience/the-pushkar-glitch.html
@@ -1,15 +1,95 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Pushkar Glitch | Cycle Culture</title>
-    <meta name="description" content="Slow cycling journey through sacred Pushkar landscapes">
+    <title>Pushkar Cycling Tour - Sacred Slow Travel Experience | Cycle Culture</title>
+    <meta name="description" content="Experience Pushkar's sacred landscapes on our immersive cycling tour. Slow travel through villages, temples and desert trails with expert local guides.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://cycleculture.in/experience/pushkar-glitch.html" />
+    <link rel="icon" href="../images/favicon.ico" type="icon">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <meta name="copyright" content="© 2025 Cycle Culture">
+    <meta property="og:title" content="Pushkar Cycling Tour - Sacred Slow Travel Experience | Cycle Culture">
+    <meta property="og:description" content="Experience Pushkar's sacred landscapes on our immersive cycling tour. Slow travel through villages, temples and desert trails with expert local guides.">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+    <link rel="preload" href="../css/itinerary.css" as="style">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Glacial+Indifference:wght@300;400;700&display=swap" as="style">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/itinerary.css">
+    <meta name="theme-color" content="#00a859">
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-56YGC2V2YG', {
+            'page_title': 'Experience - Pushkar Cycling Tour',
+            'page_path': '/experience/pushkar-glitch.html'
+        });
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "TouristTrip",
+      "name": "The Pushkar Glitch Cycling Tour",
+      "description": "3-day immersive cycling experience through Pushkar's sacred landscapes and villages",
+      "itinerary": {
+        "@type": "ItemList",
+        "numberOfItems": 3,
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "item": {
+              "@type": "TouristAttraction",
+              "name": "Day 1: The First Path",
+              "description": "Cycling to the universe's sole shrine of creation through peaceful countryside paths"
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "item": {
+              "@type": "TouristAttraction",
+              "name": "Day 2: The Last Light",
+              "description": "Golden desert landscapes ride ending with sunset at Savitri Mata Temple"
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "item": {
+              "@type": "TouristAttraction",
+              "name": "Day 3: The Secret Gate",
+              "description": "Farmland cycling and nature walk to panoramic viewpoints"
+            }
+          }
+        ]
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://cycleculture.in/experience/pushkar-glitch.html",
+        "priceCurrency": "INR",
+        "availability": "https://schema.org/LimitedAvailability"
+      },
+      "organizer": {
+        "@type": "Organization",
+        "name": "Cycle Culture",
+        "url": "https://cycleculture.in"
+      },
+      "keywords": ["Pushkar tours", "Pushkar cycling", "Rajasthan bike tour", "slow travel India", "Pushkar sacred cycling", "cultural cycling tour", "Pushkar e-bike experience"]
+    }
+    </script>
 </head>
 <body>
     <!-- Navigation -->
@@ -32,7 +112,7 @@
 
     <!-- Hero Section -->
     <section class="fullpage-section" id="hero">
-        <img src="../images/09.jpg" alt="Pushkar landscape" class="section-background">
+        <img src="../images/experience/pushkar-ghat.jpg" alt="Pushkar landscape" class="section-background">
         <div class="section-overlay"></div>
         <div class="section-content">
             <h1>The Pushkar Glitch</h1>
@@ -45,7 +125,7 @@
 
     <!-- Overview Section -->
     <section class="fullpage-section" id="overview">
-        <img src="../images/08.jpg" alt="Pushkar countryside" class="section-background">
+        <img src="../images/experience/pushkar-experience.jpg" alt="Pushkar countryside" class="section-background">
         <div class="section-overlay"></div>
         <div class="section-content">
             <h2 class="card-title">The Experience</h2>
@@ -61,7 +141,7 @@
 
     <!-- Details Section -->
     <section class="fullpage-section" id="details">
-        <img src="../images/07.jpg" alt="Pushkar temple" class="section-background">
+        <img src="../images/experience/pushkar-journey.jpg" alt="Pushkar temple" class="section-background">
         <div class="section-overlay"></div>
         <div class="section-content">
             <h2 class="card-title">Journey Details</h2>
@@ -110,7 +190,7 @@
 
     <!-- Itinerary Section -->
     <section class="fullpage-section" id="itinerary">
-        <img src="../images/06.jpg" alt="Pushkar village" class="section-background">
+        <img src="../images/experience/pushkar-itinerary.jpg" alt="Pushkar village" class="section-background">
         <div class="section-overlay"></div>
         <div class="section-content">
             <h2 class="card-title">Daily Itinerary</h2>
@@ -166,7 +246,7 @@
 
     <!-- What to Expect Section -->
     <section class="fullpage-section" id="expectations">
-        <img src="../images/05.jpg" alt="Pushkar sunset" class="section-background">
+        <img src="../images/experience/pushkar-highlights.jpg" alt="Pushkar sunset" class="section-background">
         <div class="section-overlay"></div>
         <div class="section-content">
             <h2 class="card-title">Experience Highlights</h2>
@@ -187,7 +267,7 @@
 
     <!-- Inclusions Section -->
     <section class="fullpage-section" id="inclusions">
-        <img src="../images/04.jpg" alt="Pushkar cycling" class="section-background">
+        <img src="../images/experience/pushkar-inclusions.jpg" alt="Pushkar cycling" class="section-background">
         <div class="section-overlay"></div>
         <div class="section-content">
             <h2 class="card-title">Inclusions</h2>
@@ -207,7 +287,7 @@
 
     <!-- Inclusions Section -->
     <section class="fullpage-section" id="accommodation">
-        <img src="../images/04.jpg" alt="Pushkar cycling" class="section-background">
+        <img src="../images/experience/pushkar-stay.jpg" alt="Pushkar cycling" class="section-background">
         <div class="section-overlay"></div>
         <div class="section-content">
             <h2 class="card-title">Your Stay</h2>
@@ -226,7 +306,7 @@
 
     <!-- Who Should Participate Section -->
     <section class="fullpage-section" id="participants">
-        <img src="../images/05.jpg" alt="Pushkar culture" class="section-background">
+        <img src="../images/experience/pushkar-tour.jpg" alt="Pushkar culture" class="section-background">
         <div class="section-overlay"></div>
         <div class="section-content">
             <h2 class="card-title">This Journey Is For You If You...</h2>
@@ -251,7 +331,7 @@
 
     <!-- Clothing Section -->
     <section class="fullpage-section" id="activities">
-        <img src="../images/02.jpg" alt="Pushkar cycling gear" class="section-background">
+        <img src="../images/experience/pushkar-activities.jpg" alt="Pushkar cycling gear" class="section-background">
         <div class="section-overlay"></div>
         <div class="section-content">
             <h2 class="card-title">Additional Activities</h2>
@@ -270,7 +350,7 @@
 
     <!-- Terms & Conditions Section -->
     <section class="fullpage-section" id="terms">
-        <img src="../images/01.jpg" alt="Pushkar landscape" class="section-background">
+        <img src="../images/experience/pushkar-terms-conditions.jpg" alt="Pushkar landscape" class="section-background">
         <div class="section-overlay"></div>
         <div class="section-content">
             <h2 class="card-title">Terms & Conditions</h2>
