--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             
             <div class="spotlight-item">
                 <p>Pushkar's sacred lakes and desert landscapes create a surreal backdrop for cycling. Our 3-day adventure takes you through rural villages and golden dunes at sunset.</p>
-                <a href="#" class="read-more">view details →</a>
+                <a href="experience/pushkar-glitch.html" class="read-more">view details →</a>
             </div>
             
             <div class="spotlight-item">
