--- a/experience/the-pushkar-glitch.html
+++ b/experience/the-pushkar-glitch.html
@@ -128,7 +128,7 @@
         <img src="../images/experience/pushkar-experience.jpg" alt="Pushkar countryside" class="section-background">
         <div class="section-overlay"></div>
         <div class="section-content">
-            <h2 class="card-title">The Experience</h2>
+            <h2 class="card-title">The First Path Experience</h2>
             <p class="card-desc">
                 We invite you to experience Pushkar where the creation of the universe began, glitching reality into being. 
                 Pushkar doesn't do well with speed; it's a place best known slowly, deeply, without engines or hurry. In this unhurried space, cycle with ease through sacred landscapes, where every turn reveals why slow travel is the only way to truly understand a place.
@@ -162,9 +162,15 @@
                 </div>
 
                 <div class="info-item">
-                    <h3>Departure Point - </h3>
+                    <h3>Start Point - </h3>
                     <p>Pushkar</p>
                 </div>
+
+                <div class="info-item">
+                    <h3>End Point - </h3>
+                    <p>Pushkar</p>
+                </div>
+                
                 <div class="info-item">
                     <h3>Event Dates - </h3>
                     <p>Contact Us</p>
@@ -206,7 +212,7 @@
                 </div>
                 <div class="timeline-content">
                     <p class="card-desc">
-                        We begin with a nourishing breakfast before our gentle ride to the universe's sole shrine of creation, the only active temple of its kind in existence. We'll wind through peaceful countryside paths and hills to meet Pushkar's most revered soul, the living guardian of these lands. Here, we'll spend unhurried hours exploring the tranquil grounds, wandering through the surrounding landscape, and absorbing the peaceful atmosphere before returning as dusk settles.
+                        We begin with a brief before our gentle ride to the universe's sole shrine of creation, the only active temple of its kind in existence. We'll wind through peaceful countryside paths and hills to meet Pushkar's most revered soul, the living guardian of these lands. Here, we'll spend unhurried hours exploring the tranquil grounds, wandering through the surrounding landscape, and absorbing the peaceful atmosphere before returning as dusk settles.
                         <br><br>Distance: 30km.
                     </p>
                 </div>
@@ -362,7 +368,7 @@
                 </div>
                 <div class="terms-content">
                     <p class="card-desc">The Event Terms and Conditions detailed below apply to all participants of 'The Pushkar Glitch' as well as attendees or participants (herein after called "Participant") participating in any of Cycle Culture's ("organizer", "we", "us", "our") cycling events.</p>
-                    <p class="card-desc">By registering for this event, you agree to abide by all terms and conditions set forth below. The organizer reserves the right to modify these terms at any time without prior notice.</p>
+                    <p class="card-desc">By registering for this event, you agree to abide by the terms and conditions in effect at the time of registration. If you are already registered, the organizer will notify you of any material changes to these terms. For non-registered users, the organizer reserves the right to modify these terms at any time without prior notice.</p>
                 </div>
             </div>
             
@@ -372,7 +378,7 @@
                     <h3>Entry and Participation</h3>
                 </div>
                 <div class="terms-content">
-                    <p class="card-desc">Participants must complete the registration process and pay the full event fee to secure their spot.</p>
+                    <p class="card-desc">Participants must complete the registration process.</p>
                     <p class="card-desc">All participants must be at least 14 years of age at the time of the event. Those under 18 must be accompanied by a parent or legal guardian.</p>
                     <p class="card-desc">The organizer reserves the right to refuse entry to any participant who does not meet the requirements or fails to provide necessary documentation.</p>
                 </div>
@@ -384,7 +390,7 @@
                     <h3>Equipment Requirements</h3>
                 </div>
                 <div class="terms-content">
-                    <p class="card-desc">Participants will be provided with e-cycles and basic safety gear.</p>
+                    <p class="card-desc">Participants will be provided with cycles and basic safety gear.</p>
                     <p class="card-desc">Helmets are mandatory for all participants during cycling activities.</p>
                     <p class="card-desc">The organizer is not responsible for any damage to personal equipment during the event.</p>
                 </div>
@@ -420,9 +426,9 @@
                     <h3>Refunds and Cancellation</h3>
                 </div>
                 <div class="terms-content">
-                    <p class="card-desc">Cancellations made more than 14 days prior to the event will receive a full refund.</p>
-                    <p class="card-desc">Cancellations made 7-14 days prior will receive a 50% refund.</p>
-                    <p class="card-desc">No refunds will be issued for cancellations made less than 7 days before the event.</p>
+                    <p class="card-desc">Cancellations made more than 10 days prior to the event will receive a full refund.</p>
+                    <p class="card-desc">Cancellations made 9 days to 1 day prior will receive a 50% refund.</p>
+                    <p class="card-desc">No refunds will be issued for cancellations made less than 1 day before the event date.</p>
                     <p class="card-desc">The organizer reserves the right to cancel the event due to unforeseen circumstances. In such cases, participants will receive a full refund or option to reschedule.</p>
                 </div>
             </div>
