--- a/experience/the-pushkar-glitch.html
+++ b/experience/the-pushkar-glitch.html
@@ -278,7 +278,7 @@
         <div class="section-content">
             <h2 class="card-title">Inclusions</h2>
             <ul class="checklist">
-                <li><i class="fas fa-check"></i> E-Cycles and safety gear</li>
+                <li><i class="fas fa-check"></i> Cycles and safety gear</li>
                 <li><i class="fas fa-check"></i> Experienced local cycling guides</li>
                 <li><i class="fas fa-check"></i> 3 nights accommodation in private ensuite rooms</li>
                 <li><i class="fas fa-check"></i> Daily breakfast with local specialties</li>
