--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <a href="./" class="active">Home</a>
                 <a href="spotlight.html">Spotlight</a>
                 <a href="#">Experiences</a>
-                <a href="#">Events</a>
-                <a href="#">Clubs</a>
+                <!-- <a href="#">Events</a> -->
+                <!-- <a href="#">Clubs</a> -->
                 <a href="contact.html">Contact</a>
             </div>
             <button class="mobile-menu-btn" aria-label="Toggle menu">☰</button>
@@ -240,3 +240,4 @@
     <script defer src="js/home.js"></script>
 </body>
 </html>
+
