--- a/spotlight.html
+++ b/spotlight.html
@@ -82,8 +82,8 @@
                 <a href="index.html">Home</a>
                 <a href="spotlight.html" class="active">Spotlight</a>
                 <a href="#">Experiences</a>
-                <a href="#">Events</a>
-                <a href="#">Clubs</a>
+                <!-- <a href="#">Events</a> -->
+                <!-- <a href="#">Clubs</a> -->
                 <a href="contact.html">Contact</a>
             </div>
             <button class="mobile-menu-btn">☰</button>
