--- a/contact.html
+++ b/contact.html
@@ -83,8 +83,8 @@
                 <a href="./">Home</a>
                 <a href="spotlight.html">Spotlight</a>
                 <a href="#">Experiences</a>
-                <a href="#">Events</a>
-                <a href="#">Clubs</a>
+                <!-- <a href="#">Events</a> -->
+                <!-- <a href="#">Clubs</a> -->
                 <a href="contact.html" class="active">Contact</a>
             </div>
             <button class="mobile-menu-btn">☰</button>
@@ -133,3 +133,4 @@
     <script src="js/contact.js"></script>
 </body>
 </html>
+
